--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>5.10.2</version> <!-- can be omitted when using the BOM -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version> <!-- Check for the latest version -->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
