--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>gson</artifactId>
             <version>2.10.1</version> <!-- Check for the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.5.2</version> <!-- Adjust the version number as needed -->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
